# EEEE3001Slave

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeListsLin.txt  HoughTransform.cpp  HoughTransform.h  HoughTransformOriginal.cpp  README.md  THING.txt  error.txt  errors.txt  errors2.txt  main.cpp  main.h  mainx.cpp  mainx.h  pat.txt  post.cmd
3DModelsGit/: IlluminatorMount.blend
Ellipse/: Ellipse.cpp  Ellipse.h  EllipseTest.cpp  main.h
Screen/: Screen.cpp  Screen.h
include/: CV++.h  ComputerVision.h  Ellipse.h  Ellipse_main.h  HoughTransform.h  MQTT++.h  MQTT++Pub.h  MQTT++Sub.h  Screen.h  Screen_main.h  correction.h
src/: CV++.cpp  ComputerVision.cpp  Ellipse.cpp  Ellipse_main.cpp  HoughTransform.cpp  MQTT++.cpp  Screen.cpp  correction.cpp
